fix deploy problems